refactoring add api function