@@ -1,6 +1,5 @@
 package jiekie.completer;
 
-import jiekie.EconomyPlugin;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
@@ -12,12 +11,6 @@ import java.util.Collections;
 import java.util.List;
 
 public class CheckTabCompleter implements TabCompleter {
-    private final EconomyPlugin plugin;
-
-    public CheckTabCompleter(EconomyPlugin plugin) {
-        this.plugin = plugin;
-    }
-
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
         int length = args.length;
@@ -26,7 +19,7 @@ public class CheckTabCompleter implements TabCompleter {
         }
 
         if(length == 2) {
-            return Arrays.asList("개수");
+            return List.of("개수");
         }
 
         return Collections.emptyList();
